css/style.css
@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');

* {
  margin: 0;
  padding: 0;
  font-family: 'Roboto'
}

body {
  background: #171717;
}

header {
  background: #444444;
  padding: 20px;
  border-bottom: 3px solid #DA0037;
}

.card {
  margin: 0 auto;
  margin-top: 50px;
  background: #ededed;
  border-radius: 15px;
  padding: 30px;
  width: 75%;
  max-width: 500px;
  max-height: 300px;
  border: 2px solid ededed;
}

.card h3 {
  color: #171717;
  font-size: 2rem;
}

.card p {
  color: 171717;
  margin: 15px 0;
}

.card-link {
  display: inline-block;
  background: #DA0037;
  color: #ededed;
  text-decoration: none;
  text-transform: uppercase;
  font-weight: 700;
  padding: 10px 25px;
  margin-right: 25px;
}

.card-link:hover,
.card-link:focus {
  background: #444444;
  color: #ededed;
}


h1 {
  color: #ededed;
  text-align: center;
  margin-bottom: 20px;
}

nav ul {
  list-style: none;
  display: flex;
  justify-content: center;
  padding: 0;
}

nav ul a {
  margin: 0 25px;
  color: #ededed;
  text-decoration: none;
  text-transform: uppercase;
  padding: 5px;
}

nav ul a:hover, 
nav ul a:focus {
  border-bottom: 2px solid #DA0037;
}

@media (max-width: 675px) {
  nav ul {
    flex-direction: column;
    align-items: center;
  }
  nav ul li {
    margin: 10px;
  }
}

